fix: add dark mode styling

--- a/css/style.css
+++ b/css/style.css
@@ -1139,6 +1139,11 @@ video {
     background-color: rgb(15 23 42 / var(--tw-bg-opacity));
   }
 
+  .dark\:bg-slate-800 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(30 41 59 / var(--tw-bg-opacity));
+  }
+
   .dark\:from-slate-800 {
     --tw-gradient-from: #1e293b var(--tw-gradient-from-position);
     --tw-gradient-to: rgb(30 41 59 / 0) var(--tw-gradient-to-position);
